# math.prepcourse

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: hello.ipynb  trigonometric_functions.ipynb
