[tool.poetry]
name = "prepcourse"
version = "0.1.0"
description = "Course material for a maths preparation course."
authors = ["Reiner Hüchting <dev@reinerhuechting.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlite-core = "^0.1.2"
jupyterlab = "^4.0.5"
jupyterlite-pyodide-kernel = "^0.1.1"
ipywidgets = "^8.1.0"
matplotlib = "^3.7.2"
ipympl = "^0.9.3"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
